packages/tree-sitter-mirin/grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.function_definition,
        $.struct_definition,
        $.port_definition,
        $.trait_definition,
        $.impl_block,
        $.module_definition,
        $.use_declaration,
      ),

    // `use` imports. Paths are 2018-style relative; `crate`/`super`/`self`
    // anchors are ordinary identifier segments recognised by the resolver.
    //   use a::b::c;   use a::b as d;   use a::{b, c::{d, e}};   use a::*;
    trait_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "trait",
        field("name", $.identifier),
        field("body", $.trait_body),
      ),

    trait_body: ($) =>
      seq("{", repeat(choice($.trait_method, $.trait_const)), "}"),

    trait_method: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        optional(field("named_parameters", $.named_parameter_section)),
        field("parameters", $.parameter_section),
        optional(
          seq(
            "->",
            field(
              "return_type",
              choice($.return_type_expression, $.tuple_type, $.named_return),
            ),
          ),
        ),
        ";",
      ),

    trait_const: ($) =>
      seq(
        "const",
        field("name", $.identifier),
        ":",
        field("type", $._type),
        ";",
      ),

    // Binder-first: `impl {dom clk: Clock} Stream8 { … }` — the braces after
    // `impl` DECLARE generics. A generic owner is APPLIED (`impl {dom clk: Clock,
    // A: Type} Bus(A) { … }`), the same way a trait impl writes its self type
    // (`impl {param n: integer} Add for uint(n) { … }`); both use the restricted
    // (no named-args) type form so a trailing `{` opens the body. For an
    // inherent impl the subject IS the self type; for a trait impl it is the
    // trait and `for` introduces the self type.
    impl_block: ($) =>
      seq(
        "impl",
        optional(field("named_parameters", $.named_parameter_section)),
        field("name", $.return_type_expression),
        optional(seq("for", field("self_type", $.return_type_expression))),
        optional(field("where", $.where_clause)),
        field("body", $.impl_body),
      ),

    impl_body: ($) =>
      seq("{", repeat(choice($.function_definition, $.impl_const)), "}"),

    // An associated const's value in an impl. The value is a const
    // expression; semantics land with associated consts (planning/traits.md
    // T4) — the grammar carries them from the start.
    impl_const: ($) =>
      seq(
        "const",
        field("name", $.identifier),
        ":",
        field("type", $._type),
        "=",
        field("value", $.expression),
        ";",
      ),

    // `where T: Add + Bits, U: Bits` — trait-bound predicates on generic
    // params. Bounds use the restricted form (name + optional positional
    // args): a brace after a bound would open the item's body. Domain
    // predicates (`T @ clk`) join when planning/domain_checking.md
    // lands.
    where_clause: ($) =>
      seq("where", commaSep1($.where_predicate), optional(",")),

    where_predicate: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("bound", $.trait_bound),
        repeat(seq("+", field("bound", $.trait_bound))),
      ),

    trait_bound: ($) =>
      prec.right(seq(field("name", $.identifier), optional($.type_index))),

    function_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "fn",
        field("name", $.identifier),
        optional(field("named_parameters", $.named_parameter_section)),
        field("parameters", $.parameter_section),
        optional(
          seq(
            "->",
            field(
              "return_type",
              choice($.return_type_expression, $.tuple_type, $.named_return),
            ),
          ),
        ),
        optional(field("where", $.where_clause)),
        choice(
          field("body", $.block),
          seq("=", "verilog", field("verilog_body", $.verilog_block)),
        ),
      ),

    // An inline-verilog fn body: the signature is the contract, the raw
    // text is spliced into the emitted module (`planning/inline_verilog.md`).
    verilog_block: ($) => seq("{", field("content", $.verilog_content), "}"),

    // Return-position type. Excludes `type_named_args` because a trailing
    // `{` in return position opens the fn body, not a named-arg-application.
    // Use parentheses to write a parametric return type (`-> DF(uint(8))`)
    // and call sites supply the named bindings positionally elsewhere.
    return_type_expression: ($) =>
      prec.right(
        seq(
          field("name", $.identifier),
          optional($.type_index),
          optional(seq("@", field("domain", $.identifier))),
        ),
      ),

    // Named result(s): `-> (output: DF @clk)` names the whole result;
    // `-> (sum: uint(8), carry: bool)` names the parts of a tuple result. The
    // names become referrable result places in the body (the `return` keyword
    // doesn't exist when results are named). A single element is the result
    // type itself; two or more form a tuple (planning/return_variable.md). The
    // `:` distinguishes this from a bare tuple_type return `(A, B)`.
    named_parameter_section: ($) => seq("{", commaSep($.named_parameter), optional(","), "}"),

    parameter_section: ($) => seq("(", commaSep($.parameter), optional(","), ")"),

    named_parameter: ($) =>
      prec(
        1,
        seq(
          optional(field("direction", choice("in", "out"))),
          optional(field("kind", choice("param", "dom"))),
          field("name", $.identifier),
          optional(
            seq(
              ":",
              field("type", $._type),
              repeat(seq("+", field("bound", $.trait_bound))),
            ),
          ),
          optional(seq("=", field("default", $.expression))),
        ),
      ),

    parameter: ($) =>
      choice(
        seq(
          field("name", "self"),
          optional(seq("@", field("domain", $.identifier))),
        ),
        seq(
          optional(field("direction", choice("in", "out"))),
          optional(field("kind", choice("param", "dom"))),
          field("name", $.identifier),
          ":",
          field("type", $._type),
          repeat(seq("+", field("bound", $.trait_bound))),
          optional(seq("=", field("default", $.expression))),
        ),
      ),

    block: ($) =>
      seq("{", repeat($.statement), optional(field("tail", $.expression)), "}"),

    statement: ($) =>
      choice(
        $.let_statement,
        $.for_statement,
        $.return_statement,
        $.var_statement,
        $.assignment_statement,
        $.expression_statement,
      ),

    // `for x in v { … }` / `for (i, x) in v.enumerate() { … }` — structural
    // replication over a vector, emitted as a NAMED SV generate-for
    // (planning/for_loops.md). The binder is a pattern (planning/tuples.md);
    // the iterable uses the same restricted forms as if-conditions (a
    // trailing `{` opens the body).
    for_statement: ($) =>
      seq(
        "for",
        field("pattern", $._pattern),
        "in",
        field("iter", $._for_iterable),
        field("body", $.block),
      ),

    // HEADER expressions (if-conditions, for-iterables, when-events): the
    // full expression grammar minus BARE record literals — Rust's
    // no-struct-literal contexts. A record constructor in a header goes in
    // parens (which reset to the full grammar). Named-arg method calls
    // (`v.f{a}(x)`) survive because a named-arg list is always followed by
    // a positional list — the GLR fork resolves at the `(`.
    _header_expression: ($) =>
      choice(
        alias($.header_binary, $.binary_expression),
        alias($.header_unary, $.unary_expression),
        alias($.header_postfix, $.postfix_expression),
        $.typed_literal,
        $.vec_literal,
        $.path_expression,
        $.number,
        $.parenthesized_expression,
        $.tuple_expression,
      ),

    _for_iterable: ($) => $._header_expression,

    let_statement: ($) =>
      seq(
        "let",
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $.expression),
        ";",
      ),

    // `(a, b)` / `(a, (b, c))` in binder position — destructuring
    // (planning/tuples.md). Identifiers only; lowering desugars patterns to
    // field projections, so there is no pattern IR. Arity ≥ 2.
    tuple_pattern: ($) =>
      seq("(", $._pattern, ",", commaSep1($._pattern), optional(","), ")"),

    // `pair { valid = vld, data = dat }` in binder position — struct
    // destructuring (planning/tuples.md). `name = binding` maps a field to a
    // (possibly nested) sub-pattern; `=` matches the record-literal field form
    // (`:` always means "type"). Like tuple patterns, this desugars to field
    // projection lets — no pattern IR. Only structs and positive tuples are
    // pattern-matchable; ports are not.
    struct_pattern: ($) =>
      seq(
        field("constructor", $.identifier),
        "{",
        commaSep1($.struct_pattern_field),
        optional(","),
        "}",
      ),

    struct_pattern_field: ($) =>
      seq(field("name", $.identifier), "=", field("binding", $._pattern)),

    _pattern: ($) => choice($.identifier, $.tuple_pattern, $.struct_pattern),

    return_statement: ($) => seq("return", field("value", $.expression), ";"),

    var_statement: ($) =>
      seq(
        "var",
        commaSep1(field("name", $.identifier)),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $.expression))),
        ";",
      ),

    assignment_statement: ($) =>
      seq(field("left", $.expression), "=", field("right", $.expression), ";"),

    type_expression: ($) =>
      prec.right(
        seq(
          field("name", $.identifier),
          optional($.type_named_args),
          optional($.type_index),
          optional(seq("@", field("domain", $.identifier))),
        ),
      ),

    // Named-section type arguments — supply the def's named-section
    // generic params (typically `dom clk: Clock`). Example: `DF{clk}` binds
    // the port's `dom clk` to the local `clk`. The contents are
    // type arguments in declared order, just like the positional `(…)`
    // section, but applied to the def's named params.
    type_index: ($) => seq("(", commaSep1($.type_argument), ")"),

    type_argument: ($) =>
      choice($.type_expression, $.tuple_type, $.number, $.const_expression),

    // Any type form: a named type or a tuple (planning/tuples.md).
    _type: ($) => choice($.type_expression, $.tuple_type),

    // `(A, B)` — a structural product type; each element may carry its own
    // domain, and a trailing `@clk` is the default for elements without one
    // (planning/tuples.md). Arity ≥ 2.
    tuple_type: ($) =>
      seq(
        "(",
        $._type,
        ",",
        commaSep1($._type),
        optional(","),
        ")",
        optional(seq("@", field("domain", $.identifier))),
      ),

    // The restricted const grammar in type positions: arithmetic over
    // literals, names, and field projections. Anything bigger (a call, an
    // if/else) goes through a `let`: `let w = f(n); uint(w)`. A *bare* name
    // stays a type_expression (the lowerer decides type vs const by kind).
    const_expression: ($) =>
      choice($.const_binary, $.const_field, $.const_path, $.const_paren),

    // `T::width` — an associated const projected from a bounded type param
    // (planning/traits.md T4).
    const_path: ($) =>
      seq(field("base", $.identifier), "::", field("item", $.identifier)),

    expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.typed_literal,
        $.vec_literal,
        $.postfix_expression,
        $.record_constructor_expression,
        $.path_expression,
        $.return_expression,
        $.number,
        $.parenthesized_expression,
        $.tuple_expression,
        $.block,
        $.if_expression,
        $.when_expression,
      ),

    // Rust-style `if cond { … } else { … }`. Both branches are required;
    // Mirin has no statement-form `if`. The two branches must produce the
    // same type, which is the if-expression's type. The condition uses
    // `_expression_no_struct` so that `if Foo { x: 1 } { … }` doesn't
    // parse `Foo { x: 1 }` as a record-constructor (Rust does the same).
    when_expression: ($) =>
      seq(
        optional(seq("init", field("init", $._header_expression))),
        "when",
        field("event", $._when_event),
        field("body", $.block),
      ),

    // Restricted event expression. A field-access chain (`clk.posedge()`)
    // is the common case; complex events go in parens. Note: we DO allow
    // `postfix_expression` here because the common case `clk.posedge()`
    // is a postfix that ends with `)` — the parser can tell where the
    // event ends before `{ … }` begins.
    _when_event: ($) => $._header_expression,

    // Explicit literal construction `uint(6)::4` — the value in the type's
    // associated-const namespace (planning/numeric_literals.md L4). The
    // restricted type form, like return types: a brace would be ambiguous.
    typed_literal: ($) =>
      seq(
        field("type", $.return_type_expression),
        "::",
        field("value", $.number),
      ),

    // Prefix `-` (`Neg::neg`) and `!` (`Not::not`) — never a negative literal
    // (planning/numeric_literals.md L5). Binds tighter than any binary op.
    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(field("operator", choice("-", "!")), field("operand", $.expression)),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(
          PREC.logical_or,
          seq(
            field("left", $.expression),
            field("operator", "||"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.logical_and,
          seq(
            field("left", $.expression),
            field("operator", "&&"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.comparison,
          seq(
            field("left", $.expression),
            field("operator", choice("==", "!=", "<", "<=", ">", ">=")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.multiplicative,
          seq(field("left", $.expression), field("operator", "*"), field("right", $.expression)),
        ),
        prec.left(
          PREC.additive,
          seq(
            field("left", $.expression),
            field("operator", choice("+", "-")),
            field("right", $.expression),
          ),
        ),
      ),

    postfix_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field(
            "receiver",
            choice(
            $.path_expression,
            $.return_expression,
            $.number,
            $.parenthesized_expression,
            $.tuple_expression,
          ),
          ),
          repeat1(
            choice(
              $.field_access,
              $.index_access,
              seq($.named_argument_list, $.argument_list),
              $.argument_list,
            ),
          ),
        ),
      ),

    // `.f` named projection, `.0` tuple projection (planning/tuples.md) —
    // numbers never contain dots, so `x.0.1` lexes cleanly.
    field_access: ($) =>
      seq(".", field("field", choice($.identifier, $.number))),

    // `v[i]` — single-element indexing (planning/vectors.md).
    return_expression: ($) => "return",
