packages/tree-sitter-mirin/test/corpus/expressions.txt
========================================
literal bases and unary minus
========================================

fn f() -> uint(8) {
    let a = 0xF0 + 0b1010_0001;
    let b = -a;
    return 1_000;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (number))
              right: (expression
                (number))))))
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (unary_expression
              operand: (expression
                (path_expression
                  segment: (identifier)))))))
      (statement
        (return_statement
          value: (expression
            (number)))))))

========================================
typed literal construction
========================================

fn f() -> uint(8) {
    return uint(8)::0xFF;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (return_statement
          value: (expression
            (typed_literal
              type: (return_type_expression
                name: (identifier)
                (type_index
                  (type_argument
                    (number))))
              value: (number))))))))

========================================
vector construction and indexing
========================================

fn f (a: uint(4)) -> uint(4) {
    let v: Vec(3, uint(4)) = [a, 2, 3];
    let z: Vec(3, uint(4)) = [0; 3];
    v[0]
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
                (number))
              (type_argument
                (type_expression
                  name: (identifier)
                  (type_index
                    (type_argument
                      (number)))))))
          value: (expression
            (vec_literal
              (expression
                (path_expression
                  segment: (identifier)))
              (expression
                (number))
              (expression
                (number))))))
      (statement
        (let_statement
          pattern: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
                (number))
              (type_argument
                (type_expression
                  name: (identifier)
                  (type_index
                    (type_argument
                      (number)))))))
          value: (expression
            (vec_literal
              elem: (expression
                (number))
              len: (expression
                (number))))))
      tail: (expression
        (postfix_expression
          receiver: (path_expression
            segment: (identifier))
          (index_access
            index: (expression
              (number))))))))

========================================
for loops over vectors
========================================

fn f (v: Vec(3, uint(8))) -> uint(8) {
    for x in v {
        let y = x;
    }
    for (i, x) in v.enumerate() {
        let y = x;
    }
    0
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))
            (type_argument
              (type_expression
                name: (identifier)
                (type_index
                  (type_argument
                    (number)))))))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (for_statement
          pattern: (identifier)
          iter: (path_expression
            segment: (identifier))
          body: (block
            (statement
              (let_statement
                pattern: (identifier)
                value: (expression
                  (path_expression
                    segment: (identifier))))))))
      (statement
        (for_statement
          pattern: (tuple_pattern
            (identifier)
            (identifier))
          iter: (postfix_expression
            receiver: (path_expression
              segment: (identifier))
            (field_access
              field: (identifier))
            (argument_list))
          body: (block
            (statement
              (let_statement
                pattern: (identifier)
                value: (expression
                  (path_expression
                    segment: (identifier))))))))
      tail: (expression
        (number)))))

========================================
init preceder on when
========================================

fn f {dom clk: Clock} (a: uint(8)) -> uint(8) {
    var c: uint(8);
    c = init 5 when clk.posedge() { c + 1 };
    c
}

---

(source_file
  (function_definition
    name: (identifier)
    named_parameters: (named_parameter_section
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier))))
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (var_statement
          name: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
                (number))))))
      (statement
        (assignment_statement
          left: (expression
            (path_expression
              segment: (identifier)))
          right: (expression
            (when_expression
              init: (number)
              event: (postfix_expression
                receiver: (path_expression
                  segment: (identifier))
                (field_access
                  field: (identifier))
                (argument_list))
              body: (block
                tail: (expression
                  (binary_expression
                    left: (expression
                      (path_expression
                        segment: (identifier)))
                    right: (expression
                      (number)))))))))
      tail: (expression
        (path_expression
          segment: (identifier))))))

========================================
tuple construction, projection, destructuring
========================================

fn f {dom clk: Clock} (a: uint(8) @clk, b: bool @clk) -> (uint(8), bool) @clk {
    let p = (a, b);
    let x = p.0;
    let (y, z) = p;
    let (q, (r, s)) = (a, (b, b));
    (p.0, p.1)
}

---

(source_file
  (function_definition
    (identifier)
    (named_parameter_section
      (named_parameter
        (identifier)
        (type_expression
          (identifier))))
    (parameter_section
      (parameter
        (identifier)
        (type_expression
          (identifier)
          (type_index
            (type_argument
              (number)))
          (identifier)))
      (parameter
        (identifier)
        (type_expression
          (identifier)
          (identifier))))
    (tuple_type
      (type_expression
        (identifier)
        (type_index
          (type_argument
            (number))))
      (type_expression
        (identifier))
      (identifier))
    (block
      (statement
        (let_statement
          (identifier)
          (expression
            (tuple_expression
              (expression
                (path_expression
                  (identifier)))
              (expression
                (path_expression
                  (identifier)))))))
      (statement
        (let_statement
          (identifier)
          (expression
            (postfix_expression
              (path_expression
                (identifier))
              (field_access
                (number))))))
      (statement
        (let_statement
          (tuple_pattern
            (identifier)
            (identifier))
          (expression
            (path_expression
              (identifier)))))
      (statement
        (let_statement
          (tuple_pattern
            (identifier)
            (tuple_pattern
              (identifier)
              (identifier)))
          (expression
            (tuple_expression
              (expression
                (path_expression
                  (identifier)))
              (expression
                (tuple_expression
                  (expression
                    (path_expression
                      (identifier)))
                  (expression
                    (path_expression
                      (identifier)))))))))
      (expression
        (tuple_expression
          (expression
            (postfix_expression
              (path_expression
                (identifier))
              (field_access
                (number))))
          (expression
            (postfix_expression
              (path_expression
                (identifier))
              (field_access
                (number)))))))))

========================================
return as a referrable place
========================================

fn f(self @clk) -> DF @clk {
    let en = return.ready;
    return.valid = en;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        domain: (identifier)))
    return_type: (return_type_expression
      name: (identifier)
      domain: (identifier))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (postfix_expression
              receiver: (return_expression)
              (field_access
                field: (identifier))))))
      (statement
        (assignment_statement
          left: (expression
            (postfix_expression
              receiver: (return_expression)
              (field_access
                field: (identifier))))
          right: (expression
            (path_expression
              segment: (identifier))))))))

========================================
struct destructuring patterns (with nesting)
========================================

fn f(p: Pair) -> uint(8) {
    let pair { a = x, b = (m, n) } = p;
    return x;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (struct_pattern
            constructor: (identifier)
            (struct_pattern_field
              name: (identifier)
              binding: (identifier))
            (struct_pattern_field
              name: (identifier)
              binding: (tuple_pattern
                (identifier)
                (identifier))))
          value: (expression
            (path_expression
              segment: (identifier)))))
      (statement
        (return_statement
          value: (expression
            (path_expression
              segment: (identifier))))))))

========================================
comparison operators (full set)
========================================

fn f(a: uint(8), b: uint(8)) -> bool {
    let p = a != b;
    let q = a <= b;
    let r = a > b;
    a >= b
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))))
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (return_type_expression
      name: (identifier))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (path_expression
                  segment: (identifier)))
              right: (expression
                (path_expression
                  segment: (identifier)))))))
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (path_expression
                  segment: (identifier)))
              right: (expression
                (path_expression
                  segment: (identifier)))))))
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (path_expression
                  segment: (identifier)))
              right: (expression
                (path_expression
                  segment: (identifier)))))))
      tail: (expression
        (binary_expression
          left: (expression
            (path_expression
              segment: (identifier)))
          right: (expression
            (path_expression
              segment: (identifier))))))))

========================================
division and remainder
========================================

fn f(a: uint(8), b: uint(8)) -> uint(8) {
    let q = a / b;
    a % b
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))))
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (path_expression
                  segment: (identifier)))
              right: (expression
                (path_expression
                  segment: (identifier)))))))
      tail: (expression
        (binary_expression
          left: (expression
            (path_expression
              segment: (identifier)))
          right: (expression
            (path_expression
              segment: (identifier))))))))

========================================
shift operators
========================================

fn f(a: uint(8)) -> uint(8) {
    let s = a << 2;
    a >> 3
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (path_expression
                  segment: (identifier)))
              right: (expression
                (number))))))
      tail: (expression
        (binary_expression
          left: (expression
            (path_expression
              segment: (identifier)))
          right: (expression
            (number)))))))

========================================
bitwise operators and prefix complement
========================================

fn f(a: uint(8), b: uint(8)) -> uint(8) {
    let m = a & b | ~a;
    a ^ b
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))))
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          pattern: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (binary_expression
                  left: (expression
                    (path_expression
                      segment: (identifier)))
                  right: (expression
                    (path_expression
                      segment: (identifier)))))
              right: (expression
                (unary_expression
                  operand: (expression
                    (path_expression
                      segment: (identifier)))))))))
      tail: (expression
        (binary_expression
          left: (expression
            (path_expression
              segment: (identifier)))
          right: (expression
            (path_expression
              segment: (identifier))))))))

========================================
type-path call (concrete and bare base)
========================================

fn f(b: bits(8)) -> uint(8) {
    uint(8)::unpack(b)
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      tail: (expression
        (type_path_call
          type: (return_type_expression
            name: (identifier)
            (type_index
              (type_argument
                (number))))
          method: (identifier)
          arguments: (argument_list
            (expression
              (path_expression
                segment: (identifier)))))))))
